--- a/files/3月18日：主题——书友会_遇见未知的自己/styles.css
+++ b/files/3月18日：主题——书友会_遇见未知的自己/styles.css
@@ -68,7 +68,7 @@
   left:0px;
   top:0px;
   width:760px;
-  height:600px;
+  height:593px;
 }
 #u6 {
   border-width:0px;
@@ -76,7 +76,7 @@
   left:600px;
   top:60px;
   width:760px;
-  height:600px;
+  height:593px;
   line-height:30px;
 }
 #u7 {
@@ -86,4 +86,35 @@
   top:0px;
   width:760px;
   word-wrap:break-word;
+}
+#u8_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u8 {
+  border-width:0px;
+  position:absolute;
+  left:231px;
+  top:830px;
+  width:85px;
+  height:16px;
+}
+#u9 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  white-space:nowrap;
 }
