--- a/files/3月25日：主题——橄榄球春季初体验/styles.css
+++ b/files/3月25日：主题——橄榄球春季初体验/styles.css
@@ -12,24 +12,25 @@
   position:absolute;
   z-index:0;
 }
-#u10_img {
+#u12_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:580px;
-  height:120px;
+  height:60px;
 }
-#u10 {
+#u12 {
   border-width:0px;
   position:absolute;
   left:60px;
-  top:74px;
+  top:270px;
   width:580px;
-  height:120px;
+  height:60px;
+  font-size:16px;
   line-height:30px;
 }
-#u11 {
+#u13 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -37,7 +38,7 @@
   width:580px;
   word-wrap:break-word;
 }
-#u12_img {
+#u14_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +46,7 @@
   width:135px;
   height:30px;
 }
-#u12 {
+#u14 {
   border-width:0px;
   position:absolute;
   left:685px;
@@ -58,7 +59,7 @@
   font-size:24px;
   line-height:30px;
 }
-#u13 {
+#u15 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -66,7 +67,7 @@
   width:135px;
   white-space:nowrap;
 }
-#u14_img {
+#u16_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -74,20 +75,45 @@
   width:454px;
   height:400px;
 }
-#u14 {
+#u16 {
   border-width:0px;
   position:absolute;
   left:60px;
-  top:260px;
+  top:380px;
   width:454px;
   height:400px;
 }
-#u15 {
+#u17 {
   border-width:0px;
   position:absolute;
   left:2px;
   top:192px;
   width:450px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u18_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:462px;
+  height:152px;
+}
+#u18 {
+  border-width:0px;
+  position:absolute;
+  left:60px;
+  top:74px;
+  width:462px;
+  height:152px;
+}
+#u19 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:68px;
+  width:458px;
   visibility:hidden;
   word-wrap:break-word;
 }
